--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.scc" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a lang="en" href="./">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+    <!-- header -->
+    <header class="header">
+      <nav class="main-nav">
+        <a class="logo link" lang="en" href="./"><span class="logo-web link">Web</span>Studio</a>
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a class="nav-link link" href="">Студия</a>
           </li>
-          <li>
-            <a href="">Портфолио</a>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <!--Hero-->
