--- a/portfolio.html
+++ b/portfolio.html
@@ -17,27 +17,45 @@
     <link rel="stylesheet" href="./css/styles.scc" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a lang="en" href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+      </head>
+    </html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+      </head>
+    </html>
+    <header class="header">
+      <nav class="main-nav">
+        <a class="logo link" lang="en" href="./index.html"
+          ><span class="logo-web link">Web</span>Studio</a
+        >
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a class="nav-link link" href="">Студия</a>
           </li>
-          <li>
-            <a href="">Портфолио</a>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <h1 hidden>Портфолио</h1>
-
+      <!-- портфолио -->
       <section>
         <ul>
           <li><button type="button">Все</button></li>
