добавляет атрибут class в index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,22 +17,7 @@
     <link rel="stylesheet" href="./css/styles.scc" />
   </head>
   <body>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-      </head>
-    </html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-      </head>
-    </html>
+    <!-- Header -->
     <header class="header">
       <nav class="main-nav">
         <a class="logo link" lang="en" href="./index.html"
@@ -54,7 +39,7 @@
       <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
-      <h1 hidden>Портфолио</h1>
+      <h2 hidden>Портфолио</h2>
       <!-- портфолио -->
       <section>
         <ul>
@@ -72,7 +57,7 @@
               width="370"
               height="294"
             />
-            <h2>Технокряк</h2>
+            <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -82,7 +67,7 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Постер New Orlean vs Golden Star</h2>
+            <h3 lang="en">Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
@@ -92,7 +77,7 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Ресторан Seafood</h2>
+            <h3 lang="en">Ресторан Seafood</h3>
             <p>Приложение</p>
           </li>
           <li>
@@ -102,7 +87,7 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Проект Prime</h2>
+            <h3 lang="en">Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -112,7 +97,7 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Проект Boxes</h2>
+            <h3 lang="en">Проект Boxes</h3>
             <p>Приложение</p>
           </li>
           <li>
@@ -122,17 +107,17 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Inspiration has no Borders</h2>
+            <h3 lang="en">Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/portfolio/portfolio7.jpg" alt="журнал" width="370" height="294" />
-            <h2 lang="en">Издание Limited Edition</h2>
+            <h3 lang="en">Издание Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/portfolio8.jpg" alt="бирка" width="370" height="294" />
-            <h2 lang="en">Проект LAB</h2>
+            <h3 lang="en">Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -142,14 +127,14 @@
               width="370"
               height="294"
             />
-            <h2 lang="en">Growing Business</h2>
+            <h3 lang="en">Growing Business</h3>
             <p>Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a lang="en" href="./">WebStudio</a>
+      <a lang="en" href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
