--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <a class="logo link" lang="en" href="./"><span class="logo-web link">Web</span>Studio</a>
         <ul class="nav-list list">
           <li class="nav-item">
-            <a class="nav-link link" href="">Студия</a>
+            <a class="nav-link link" href="./index.html">Студия</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link" href="">Портфолио</a>
+            <a class="nav-link link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-item">
             <a class="nav-link link" href="">Контакты</a>
@@ -37,60 +37,67 @@
       <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-    <main>
+    <main class="main">
       <!--Hero-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="section-hero">
+        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <!--Особенности-->
-      <section>
-        <h2 hidden>Особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <section class="section-features">
+        <h2 hidden class="second-title">Особенности</h2>
+        <ul class="list-features">
+          <li class="item-features">
+            <h3 class="subtitle-features">Внимание к деталям</h3>
+            <p class="text-features">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="item-features">
+            <h3 class="subtitle-features">Пунктуальность</h3>
+            <p class="text-features">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="item-features">
+            <h3 class="subtitle-features">Планирование</h3>
+            <p class="text-features">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="item-features">
+            <h3 class="subtitle-features">Современные технологии</h3>
+            <p class="text-features">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!--Чем мы занимаемся-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="section-work">
+        <h2 class="second-title">Чем мы занимаемся</h2>
+        <ul class="list-work">
+          <li class="item-work">
             <img
+              class="image-work"
               src="./images/skill/skill1.jpg"
               alt="человек печатает на клавиатуре"
               width="370"
               height="290"
             />
           </li>
-          <li>
+          <li class="item-work">
             <img
+              class="image-work"
               src="./images/skill/skill2.jpg"
               alt="человек смотрит в смартфон и ноутбук"
               width="370"
               height="290"
             />
           </li>
-          <li>
+          <li class="item-work">
             <img
+              class="image-work"
               src="./images/skill/skill3.jpg"
               alt="человек работает на планшете"
               width="370"
@@ -100,58 +107,64 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="section-team">
+        <h2 class="second-title">Наша команда</h2>
+        <ul class="list-team">
+          <li item-team>
             <img
+              class="image-team"
               src="./images/team/worker1.jpg"
               alt=" бородатый мужчина улабаеться в рубашке"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="title-worker">Игорь Демьяненко</h3>
+            <p lang="en" class="team-function">Product Designer</p>
           </li>
-          <li>
+          <li item-team>
             <img
+              class="image-team"
               src="./images/team/worker2.jpg"
               alt="девушка в очках улыбаеться"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="title-worker">Ольга Репина</h3>
+            <p lang="en" class="team-function">Frontend Developer</p>
           </li>
-          <li>
+          <li item-team>
             <img
+              class="image-team"
               src="./images/team/worker3.jpg"
               alt="мужчина улыбаеться в светлой рубашке"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="title-worker">Николай Тарасов</h3>
+            <p lang="en" class="team-function">Marketing</p>
           </li>
-          <li>
+          <li item-team>
             <img
+              class="image-team"
               src="./images/team/worker4.jpg"
               alt="бородатый мужчина в очках в футболке"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="title-worker">Михаил Ермаков</h3>
+            <p lang="en" class="team-function">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a lang="en" href="./">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+    <!-- Footer -->
+    <footer class="footer">
+      <a class="logo link" lang="en" href="./"><span class="logo-web link">Web</span>Studio</a>
+      <address class="address">
+        <ul class="list-address">
+          <li class="item-address">
             <a
+              class="map-link"
               href="https://goo.gl/maps/PiWp8RivzMYNPMSt6"
               target="_blank"
               rel="noopener noreferrer"
@@ -159,8 +172,12 @@
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="item-address">
+            <a href="mailto:info@example.com" class="mail-address">info@example.com</a>
+          </li>
+          <li class="item-address">
+            <a href="tel:+380991111111" class="tel-address">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
