--- a/index.html
+++ b/index.html
@@ -37,16 +37,20 @@
       <a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a class="tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
+    <!-- Main -->
     <main class="main">
       <!--Hero-->
       <section class="section-hero">
-        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="main-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <!--Особенности-->
       <section class="section-features">
         <h2 hidden class="second-title">Особенности</h2>
-        <ul class="list-features">
+        <ul class="list-features list">
           <li class="item-features">
             <h3 class="subtitle-features">Внимание к деталям</h3>
             <p class="text-features">
@@ -76,7 +80,7 @@
       <!--Чем мы занимаемся-->
       <section class="section-work">
         <h2 class="second-title">Чем мы занимаемся</h2>
-        <ul class="list-work">
+        <ul class="list-work list">
           <li class="item-work">
             <img
               class="image-work"
@@ -109,7 +113,7 @@
       <!--Наша команда-->
       <section class="section-team">
         <h2 class="second-title">Наша команда</h2>
-        <ul class="list-team">
+        <ul class="list-team list">
           <li item-team>
             <img
               class="image-team"
@@ -159,12 +163,14 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a class="logo link" lang="en" href="./"><span class="logo-web link">Web</span>Studio</a>
+      <a class="logo link" lang="en" href="./"
+        ><span class="logo-web link">Web</span><span class="logo-studio">Studio</span></a
+      >
       <address class="address">
-        <ul class="list-address">
+        <ul class="list-address list">
           <li class="item-address">
             <a
-              class="map-link"
+              class="map-link link"
               href="https://goo.gl/maps/PiWp8RivzMYNPMSt6"
               target="_blank"
               rel="noopener noreferrer"
@@ -173,10 +179,10 @@
             </a>
           </li>
           <li class="item-address">
-            <a href="mailto:info@example.com" class="mail-address">info@example.com</a>
+            <a href="mailto:info@example.com" class="mail-address link">info@example.com</a>
           </li>
           <li class="item-address">
-            <a href="tel:+380991111111" class="tel-address">+38 099 111 11 11</a>
+            <a href="tel:+380991111111" class="tel-address link">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
