--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <section class="section-team">
         <h2 class="second-title">Наша команда</h2>
         <ul class="list-team list">
-          <li item-team>
+          <li class="item-team">
             <img
               class="image-team"
               src="./images/team/worker1.jpg"
@@ -125,7 +125,7 @@
             <h3 class="title-worker">Игорь Демьяненко</h3>
             <p lang="en" class="team-function">Product Designer</p>
           </li>
-          <li item-team>
+          <li class="item-team">
             <img
               class="image-team"
               src="./images/team/worker2.jpg"
@@ -136,7 +136,7 @@
             <h3 class="title-worker">Ольга Репина</h3>
             <p lang="en" class="team-function">Frontend Developer</p>
           </li>
-          <li item-team>
+          <li class="item-team">
             <img
               class="image-team"
               src="./images/team/worker3.jpg"
@@ -147,7 +147,7 @@
             <h3 class="title-worker">Николай Тарасов</h3>
             <p lang="en" class="team-function">Marketing</p>
           </li>
-          <li item-team>
+          <li class="item-team">
             <img
               class="image-team"
               src="./images/team/worker4.jpg"
